src/np222kk/dv507/a2/test/cases/negative/test_assignment.ofp
void main() {
    int i;
    i = 'c';
}